<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:background="@drawable/fondos"
    tools:context=".ClassGenerarCita">
    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos"
        android:gravity="center"
        />
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/small"
        android:layout_height="@dimen/hel"
        android:layout_weight="1"
        android:gravity="center">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/nombre"
        android:layout_below="@id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom"
        android:inputType="text"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/cedula"
        android:layout_below="@id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cedula"
        android:inputType="number"

        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/hora"
        android:layout_below="@id/cedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hora"
        android:inputType="date"
        />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <TableRow>

       <Button
           style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/notificacion"
           android:onClick="onClick"/>
    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/Button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reserva"
        android:layout_below="@id/hora"
        android:onClick="pasarActividad"

        />
    </TableRow>
</TableLayout>
