<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/fondos"
    tools:context=".ClassCodigo">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:gravity="center"
        />

    <Button
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="Pulsa Para Generar Codigo"
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

    </Button>
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/generatenumber" />
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/alt"
        android:gravity="center"
        android:text="@string/codigo"
        android:padding="@dimen/medium"
        android:id="@+id/input_codigo"
        android:layout_gravity="center"
        >

    </TextView>


    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:onClick="GuardarReserva"
        />





 </LinearLayout>
