<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.equipo.carpark.ClassLogueo"
    android:stretchColumns="*"
    >



       <android.support.design.widget.AppBarLayout
           android:layout_width="@dimen/w"
           android:layout_height="@dimen/h">
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/colorgris1"
            android:src="@drawable/carro"
            />
       </android.support.design.widget.AppBarLayout>

      <LinearLayout

          android:orientation="vertical"
          android:padding="@dimen/small"
          android:layout_height="@dimen/ha"
          android:layout_weight="2"
          android:gravity="center"
          >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:inputType="text"
            />
        </android.support.design.widget.TextInputLayout>


         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

         </android.support.design.widget.TextInputLayout>
      </LinearLayout>
    <TableRow>
        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ingresar"
             android:id="@+id/ingresar"
             android:layout_gravity="center"
        />
    </TableRow>
</TableLayout>
